syntax = "proto3";

import "Proto/Common.proto";

package discord.twitter.ttsBot.adminAccess;

enum NotificationType {
  None = 0;
  UserChanged = 1;
  QueueChanged = 2;
  ItemsChanged = 3;
  ItemPlayed = 4;
}

message NotificationItem {
  NotificationType type = 1;
}

message UserChangedNotification {
  NotificationType type = 1;
  TwitterUser newUser = 2;
  TwitterUser oldUser = 3;
}

message QueueChangedNotification {
  NotificationType type = 1;
  QueueItem newItem = 2;
  QueueItem oldItem = 3;
}

message ItemPlayedNotification {
  NotificationType type = 1;
  QueueItem item = 2;
}